# server-simple

./: .gitmodules  CMakeLists.txt
src/: logger.hpp  main.cpp
src/data_structures/: leaderboard.hpp  thread_safe_queue.hpp
src/data_structures/global_boards/: entry.hpp  leaderboard.hpp  nameboard.hpp  score_stream.hpp  scoreboard.hpp
src/data_structures/thread_safe/: locked_value.hpp  thread_safe_queue.hpp  thread_safe_unordered_map.hpp
src/network/: socket_base.cpp  socket_base.hpp
src/network/communication/: http_connection.hpp  http_parser.hpp  websocket_connection.hpp
src/network/security/: rate_limiter.hpp
src/network/servers/: persistent_server_base.cpp  persistent_server_base.hpp  request_server_base.cpp  request_server_base.hpp  server_base.cpp  server_base.hpp  test_server.cpp  test_server.hpp
src/network/sockets/: binding_socket.cpp  binding_socket.hpp  connecting_socket.cpp  connecting_socket.hpp  listening_socket.cpp  listening_socket.hpp  socket_base.cpp  socket_base.hpp  sockets.hpp
src/storage/: file_helper.hpp
src/testing/: echo_server.hpp  test_persistent_server.hpp  test_websocket_client.hpp
